k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: apigateway
  labels:
    app: simple-shop
    component: apigateway
  name: apigateway
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  selector:
    app: simple-shop
    component: apigateway
