k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: apigateway
  labels:
    app: simple-shop
    component: k8s-ingress
    team: platform
  name: k8s-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /gateway
        backend:
          serviceName: apigateway
          servicePort: 80
